--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@agendapro/react-native-events-calendar": "^0.5.4",
+    "@react-navigation/material-bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.4",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-calendars": "^1.1267.0",
+    "react-native-events-calendar": "^1.0.8",
+    "react-native-paper": "^4.9.2",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
