--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-events-calendar": "^1.0.8",
     "react-native-paper": "^4.9.2",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
