--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "axios": "^0.23.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "firebase": "^8.10.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-calendars": "^1.1267.0",
     "react-native-events-calendar": "^1.0.8",
+    "react-native-firebase": "^5.6.0",
     "react-native-paper": "^4.9.2",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
